# Product-Invoice-System

./: README.md  pyproject.toml
.github/workflows/: ci.yml
irfan_cabs/: hooks.py
irfan_cabs/irfan_cabs/doctype/product_invoice/: product_invoice.js  product_invoice.json  product_invoice.py  test_product_invoice.py
irfan_cabs/irfan_cabs/doctype/product_table/: product_table.json  product_table.py
irfan_cabs/irfan_cabs/doctype/products/: products.js  products.json  products.py  test_products.py
